# src/Mirakurun/api/channels/{type}/{channel}/stream.ts
@@ -80,7 +80,7 @@ export const get: Operation = (req, res) => {
         return;
     }
     const userId = (req.ip || "unix") + ":" + (req.socket.remotePort || Date.now());
-    const { outputFormat, contentType } = api.resolveStreamFormat(req.query.format, streamEntry?.isTlv === true);
+    const { outputFormat, contentType } = api.resolveStreamFormat(req.query.format, streamEntry?.isTlv === true, _.config.server.defaultTlvStreamFormat);
     if (req.method === "HEAD") {
         res.setHeader("Content-Type", contentType);
         res.setHeader("X-Mirakurun-Tuner-User-ID", userId);
